# CMEMS-opendap

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  environment-dev.yml  environment.yml  pyproject.toml  requirements.in  requirements.in.old  requirements.txt  requirements.txt.old
metocean_providers/: __init__.py  cmems.py
metoceanproviders/: __init__.py  bathymetries.py  cmems.py  coastlines.py  config.py  exceptions.py  ihcantabria_thredds.py  noaa.py
providers/: __init__.py  cmems.py
tests/: test_cmems.py
tests/integration/: test_cmems.py
