[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "metoceanproviders"
authors = [{name = "Germán Aragón Caminero", email = "german.aragon@unican.es"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "lxml",
    "xarray[io]",
]

[project.urls]
Home = "https://github.com/aragong/metoceanproviders"

[project.optional-dependencies]
dev = [
  "python-dotenv",
  "pytest-cov",
  "pip",
  "pip-tools",
  "pre-commit",
  "coverage-badge",
]

