[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "metoceanproviders"
authors = [{name = "Germán Aragón Caminero", email = "german.aragon@unican.es"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", "Programming Language :: Python :: 3", "Topic :: Scientific/Engineering "]
requires-python = ">=3.6"
dynamic = ["version", "description"]
dependencies = [
    "affine==2.3.0",
    "appdirs==1.4.4",
    "asciitree==0.3.3",
    "attrs==21.4.0",
    "beautifulsoup4==4.10.0",
    "certifi==2021.10.8",
    "cffi==1.15.0",
    "cfgrib==0.9.10.0",
    "cftime==1.5.2",
    "charset-normalizer==2.0.12",
    "click==8.0.3",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "docopt==0.6.2",
    "eccodes==1.4.0",
    "fasteners==0.17.3",
    "findlibs==0.0.2",
    "fsspec==2022.1.0",
    "h5netcdf==0.13.1",
    "h5py==3.6.0",
    "idna==3.3",
    "jinja2==3.0.3",
    "lxml==4.7.1",
    "markupsafe==2.0.1",
    "netcdf4==1.5.8",
    "numcodecs==0.9.1",
    "numpy==1.22.2",
    "packaging==21.3",
    "pandas==1.4.1",
    "pooch==1.6.0",
    "pycparser==2.21",
    "pydap==3.2.2",
    "pyparsing==3.0.7",
    "python-dateutil==2.8.2",
    "python-dotenv[cli]==0.19.2",
    "pytz==2021.3",
    "rasterio==1.2.10",
    "requests==2.27.1",
    "scipy==1.8.0",
    "six==1.16.0",
    "snuggs==1.4.7",
    "soupsieve==2.3.1",
    "urllib3==1.26.8",
    "webob==1.8.7",
    "xarray[io]==0.21.1",
    "zarr==2.11.0",
]

[project.urls]
Home = "https://github.com/aragong/metoceanproviders"

[project.optional-dependencies]
dev = [
    "flit",
    "black",
    "pytest-cov",
    "pip",
    "pip-tools",
    "pre-commit",
    "coverage-badge",
]

[tool.pytest.ini_options]
addopts = [
    "-v", 
    "-m not slow"
]
markers = [
    "slow"
]