[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "metoceanproviders"
authors = [{name = "Germán Aragón Caminero", email = "german.aragon@unican.es"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", "Programming Language :: Python :: 3"]
requires-python = ">=3.6"
dynamic = ["version", "description"]
dependencies = [
    "lxml",
    "xarray[io]",
    "python-dotenv[cli]",
]

[project.urls]
Home = "https://github.com/aragong/metoceanproviders"

[project.optional-dependencies]
dev = [
    "flit",
    "black",
    "pytest-cov",
    "pip",
    "pip-tools",
    "pre-commit",
    "coverage-badge",
]

[tool.pytest.ini_options]
addopts = [
    "-v", 
    "-m not slow"
]
markers = [
    "slow"
]